--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/node": "^20.10.5",
     "tsup": "^8.0.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "csv-parse": "^5.5.3"
   }
 }
