--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/intl": "^1.2.2",
     "@types/node": "^20.10.5",
     "tsup": "^8.0.1",
     "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "csv-parse": "^5.5.3"
+    "csv-parse": "^5.5.3",
+    "intl": "^1.2.5"
   }
 }
