--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "dev": "tsx watch --ignore ./node_modules src/index.ts",
-    "build": "tsup src",
+    "prestart": "tsup src",
     "start": "node dist/index.js"
   },
   "devDependencies": {
